force-app/main/default/objects/Account/fields/Account_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Account_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>