force-app/main/default/objects/Account/fields/account_partner_type__c.field-meta.xml
<CustomField>
    <fullName>account_partner_type__c</fullName>
    <label>Account Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Prospective Partner</fullName>
            </value>
            <value>
                <fullName>Terminated Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>