force-app/main/default/objects/Account/fields/Active_Sites__c.field-meta.xml
<CustomField>
    <fullName>Active_Sites__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Sites</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>