force-app/main/default/objects/Account/fields/active_sites_with_ai__c.field-meta.xml
<CustomField>
    <fullName>active_sites_with_ai__c</fullName>
    <label>Active Sites with AI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>