force-app/main/default/objects/Account/fields/admin_contact__c.field-meta.xml
<CustomField>
    <fullName>admin_contact__c</fullName>
    <label>Account Administrator Email (contact to</label>
    <length>29</length>
    <type>Text</type>
</CustomField>