force-app/main/default/objects/Account/fields/ai_featurespotchecksenabled_count__c.field-meta.xml
<CustomField>
    <fullName>ai_featurespotchecksenabled_count__c</fullName>
    <label>AI - featureSpotChecksEnabled (count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>