force-app/main/default/objects/Account/fields/alarms_active_noonlightverifeye__c.field-meta.xml
<CustomField>
    <fullName>alarms_active_noonlightverifeye__c</fullName>
    <label>Alarms - ACTIVE (NOONLIGHT/VERIFEYE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>