force-app/main/default/objects/Account/fields/amount_of_clients__c.field-meta.xml
<CustomField>
    <fullName>amount_of_clients__c</fullName>
    <label>Number of clients</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - 100</fullName>
            </value>
            <value>
                <fullName>100 - 200</fullName>
            </value>
            <value>
                <fullName>200 - 500</fullName>
            </value>
            <value>
                <fullName>500 - 1,000</fullName>
            </value>
            <value>
                <fullName>1,000 - 10,000</fullName>
            </value>
            <value>
                <fullName>10,000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>