force-app/main/default/objects/Account/fields/arr_usd__c.field-meta.xml
<CustomField>
    <fullName>arr_usd__c</fullName>
    <label>ARR (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>