force-app/main/default/objects/Account/fields/average_mrr_site__c.field-meta.xml
<CustomField>
    <fullName>average_mrr_site__c</fullName>
    <label>Avg. MRR/Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>