force-app/main/default/objects/Account/fields/bdr__c.field-meta.xml
<CustomField>
    <fullName>bdr__c</fullName>
    <label>BDR</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>