force-app/main/default/objects/Account/fields/billing_increase__c.field-meta.xml
<CustomField>
    <fullName>billing_increase__c</fullName>
    <label>Billing Increase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>