force-app/main/default/objects/Account/fields/Churn_Date__c.field-meta.xml
<CustomField>
    <fullName>Churn_Date__c</fullName>
    <description>The date on which the customer canceled their subscription or stopped using the service.</description>
    <label>Churn Date</label>
    <type>Date</type>
</CustomField>