force-app/main/default/objects/Account/fields/client_type_s__c.field-meta.xml
<CustomField>
    <fullName>client_type_s__c</fullName>
    <label>Client type(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>