force-app/main/default/objects/Account/fields/Company_LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>Company_LinkedIn_Profile__c</fullName>
    <description>The URL linking to the company&apos;s official LinkedIn page</description>
    <label>Company LinkedIn Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>