force-app/main/default/objects/Account/fields/company_mrr__c.field-meta.xml
<CustomField>
    <fullName>company_mrr__c</fullName>
    <label>MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>