force-app/main/default/objects/Account/fields/company_owner__c.field-meta.xml
<CustomField>
    <fullName>company_owner__c</fullName>
    <label>Company Owner (single-line text for inte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>