force-app/main/default/objects/Account/fields/company_owner_email__c.field-meta.xml
<CustomField>
    <fullName>company_owner_email__c</fullName>
    <label>Company Owner Email (single-line text fo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>