force-app/main/default/objects/Account/fields/company_owner_team__c.field-meta.xml
<CustomField>
    <fullName>company_owner_team__c</fullName>
    <label>Company Owner Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ops</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Partner/Brand/Channel Management</fullName>
            </value>
            <value>
                <fullName>RevOps</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>