force-app/main/default/objects/Account/fields/contract_end_date__c.field-meta.xml
<CustomField>
    <fullName>contract_end_date__c</fullName>
    <label>Competitor Contract End Date</label>
    <type>Date</type>
</CustomField>