force-app/main/default/objects/Account/fields/count_of_associated_closed_won_deals__c.field-meta.xml
<CustomField>
    <fullName>count_of_associated_closed_won_deals__c</fullName>
    <label>Count of Associated Closed Won Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>