force-app/main/default/objects/Account/fields/cs_team__c.field-meta.xml
<CustomField>
    <fullName>cs_team__c</fullName>
    <label>CS Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB-QSR</fullName>
            </value>
            <value>
                <fullName>SMB-Retail</fullName>
            </value>
            <value>
                <fullName>SMB-P&amp;P</fullName>
            </value>
            <value>
                <fullName>SMB-CAN</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>