force-app/main/default/objects/Account/fields/cstier__c.field-meta.xml
<CustomField>
    <fullName>cstier__c</fullName>
    <label>CS Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>