force-app/main/default/objects/Account/fields/Customer_ID_Callhome_Manage__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_Callhome_Manage__c</fullName>
    <description>The unique identifier for the customer as recorded in the Callhome/Manage or Intercom system.</description>
    <label>Customer ID (Callhome/Manage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>