force-app/main/default/objects/Account/fields/Customer_Name_Callhome_Manage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Callhome_Manage__c</fullName>
    <description>The name of the customer corresponding to their profile in the Callhome/Manage system.</description>
    <label>Customer Name (Callhome/Manage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>