force-app/main/default/objects/Account/fields/customer_success_manager_email__c.field-meta.xml
<CustomField>
    <fullName>customer_success_manager_email__c</fullName>
    <label>Customer Success Manager Email (single-l</label>
    <length>255</length>
    <type>Text</type>
</CustomField>