force-app/main/default/objects/Account/fields/date_of_last_deal_registration_channel__c.field-meta.xml
<CustomField>
    <fullName>date_of_last_deal_registration_channel__c</fullName>
    <label>Date Of last Deal Registration (Channel</label>
    <type>Date</type>
</CustomField>