force-app/main/default/objects/Account/fields/deal_currency_property_sync__c.field-meta.xml
<CustomField>
    <fullName>deal_currency_property_sync__c</fullName>
    <label>Deal Currency (Property Sync)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>