force-app/main/default/objects/Account/fields/deal_registered_by_company__c.field-meta.xml
<CustomField>
    <fullName>deal_registered_by_company__c</fullName>
    <label>Deal Registered By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>