force-app/main/default/objects/Account/fields/deal_registration_notes__c.field-meta.xml
<CustomField>
    <fullName>deal_registration_notes__c</fullName>
    <label>Deal Registration Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>