force-app/main/default/objects/Account/fields/delinquent_account__c.field-meta.xml
<CustomField>
    <fullName>delinquent_account__c</fullName>
    <label>Delinquent Account?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>