force-app/main/default/objects/Account/fields/Doing_Business_As_Name__c.field-meta.xml
<CustomField>
    <fullName>Doing_Business_As_Name__c</fullName>
    <description>The doing business as name needed for the Sales Order in Ironclad.</description>
    <label>Doing Business As Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>