force-app/main/default/objects/Account/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <label>Main Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>