force-app/main/default/objects/Account/fields/enterprise_lp_team_member__c.field-meta.xml
<CustomField>
    <fullName>enterprise_lp_team_member__c</fullName>
    <label>LP Analyst</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>