force-app/main/default/objects/Account/fields/First_Contact_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Create_Date__c</fullName>
    <label>First Contact Create Date</label>
    <type>DateTime</type>
</CustomField>