force-app/main/default/objects/Account/fields/First_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Conversion_Date__c</fullName>
    <label>First Conversion Date</label>
    <type>DateTime</type>
</CustomField>