force-app/main/default/objects/Account/fields/first_conversion_event_name__c.field-meta.xml
<CustomField>
    <fullName>first_conversion_event_name__c</fullName>
    <label>First Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>