force-app/main/default/objects/Account/fields/First_Deal_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Deal_Created_Date__c</fullName>
    <label>First Deal Created Date</label>
    <type>DateTime</type>
</CustomField>