force-app/main/default/objects/Account/fields/First_Touch_Converting_Campaign__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Converting_Campaign__c</fullName>
    <label>First Touch Converting Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>