force-app/main/default/objects/Account/fields/Flagged_for_SF_Import__c.field-meta.xml
<CustomField>
    <fullName>Flagged_for_SF_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&quot;A checkbox indicating whether the record has been reviewed and marked for import into Salesforce (SF)&quot;</description>
    <label>Flagged for SF Import</label>
    <type>Checkbox</type>
</CustomField>