force-app/main/default/objects/Account/fields/founded_year__c.field-meta.xml
<CustomField>
    <fullName>founded_year__c</fullName>
    <label>Year Founded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>