force-app/main/default/objects/Account/fields/has_ai__c.field-meta.xml
<CustomField>
    <fullName>has_ai__c</fullName>
    <label>Has AI?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>