force-app/main/default/objects/Account/fields/has_cloud_storage__c.field-meta.xml
<CustomField>
    <fullName>has_cloud_storage__c</fullName>
    <label>Has Cloud Storage?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>