force-app/main/default/objects/Account/fields/has_indoor_alarms__c.field-meta.xml
<CustomField>
    <fullName>has_indoor_alarms__c</fullName>
    <label>Has Indoor Alarms?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>