force-app/main/default/objects/Account/fields/has_outdoor_alarms__c.field-meta.xml
<CustomField>
    <fullName>has_outdoor_alarms__c</fullName>
    <label>Has Outdoor Alarms?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>