force-app/main/default/objects/Account/fields/hs_analytics_first_timestamp__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_first_timestamp__c</fullName>
    <label>Time First Seen</label>
    <type>DateTime</type>
</CustomField>