force-app/main/default/objects/Account/fields/hs_analytics_last_visit_timestamp__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_last_visit_timestamp__c</fullName>
    <label>Time of Last Session</label>
    <type>DateTime</type>
</CustomField>