force-app/main/default/objects/Account/fields/hs_analytics_latest_source_timestamp__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_latest_source_timestamp__c</fullName>
    <label>Latest Traffic Source Timestamp</label>
    <type>DateTime</type>
</CustomField>