force-app/main/default/objects/Account/fields/hs_analytics_num_visits__c.field-meta.xml
<CustomField>
    <fullName>hs_analytics_num_visits__c</fullName>
    <label>Number of Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>