force-app/main/default/objects/Account/fields/hs_created_by_user_id__c.field-meta.xml
<CustomField>
    <fullName>hs_created_by_user_id__c</fullName>
    <label>Created by user ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>