force-app/main/default/objects/Account/fields/hs_last_booked_meeting_date__c.field-meta.xml
<CustomField>
    <fullName>hs_last_booked_meeting_date__c</fullName>
    <label>Last Booked Meeting Date</label>
    <type>DateTime</type>
</CustomField>