force-app/main/default/objects/Account/fields/hs_last_logged_call_date__c.field-meta.xml
<CustomField>
    <fullName>hs_last_logged_call_date__c</fullName>
    <label>Last Logged Call Date</label>
    <type>DateTime</type>
</CustomField>