force-app/main/default/objects/Account/fields/hs_last_sales_activity_timestamp__c.field-meta.xml
<CustomField>
    <fullName>hs_last_sales_activity_timestamp__c</fullName>
    <label>Last Engagement Date</label>
    <type>DateTime</type>
</CustomField>