force-app/main/default/objects/Account/fields/hs_logo_url__c.field-meta.xml
<CustomField>
    <fullName>hs_logo_url__c</fullName>
    <label>Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>