force-app/main/default/objects/Account/fields/hs_num_contacts_with_buying_roles__c.field-meta.xml
<CustomField>
    <fullName>hs_num_contacts_with_buying_roles__c</fullName>
    <label>Number of contacts with a buying role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>