force-app/main/default/objects/Account/fields/hs_num_decision_makers__c.field-meta.xml
<CustomField>
    <fullName>hs_num_decision_makers__c</fullName>
    <label>Number of decision makers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>