force-app/main/default/objects/Account/fields/hs_object_id__c.field-meta.xml
<CustomField>
    <fullName>hs_object_id__c</fullName>
    <label>Record ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>