force-app/main/default/objects/Account/fields/hs_revenue_range__c.field-meta.xml
<CustomField>
    <fullName>hs_revenue_range__c</fullName>
    <label>Revenue Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>