force-app/main/default/objects/Account/fields/hs_updated_by_user_id__c.field-meta.xml
<CustomField>
    <fullName>hs_updated_by_user_id__c</fullName>
    <label>Updated by user ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>