force-app/main/default/objects/Account/fields/hs_v2_time_in_current_stage__c.field-meta.xml
<CustomField>
    <fullName>hs_v2_time_in_current_stage__c</fullName>
    <label>Time In Current Stage</label>
    <type>DateTime</type>
</CustomField>