force-app/main/default/objects/Account/fields/HubSpot_Brand__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Brand__c</fullName>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>