force-app/main/default/objects/Account/fields/HubSpot_Notes__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Notes__c</fullName>
    <description>A text area for adding custom remarks, context, or qualitative information about the account.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>