force-app/main/default/objects/Account/fields/hubspot_owner_assigneddate__c.field-meta.xml
<CustomField>
    <fullName>hubspot_owner_assigneddate__c</fullName>
    <label>Owner Assigned Date</label>
    <type>DateTime</type>
</CustomField>