force-app/main/default/objects/Account/fields/hubspot_test_expansion__c.field-meta.xml
<CustomField>
    <fullName>hubspot_test_expansion__c</fullName>
    <label>Number of associated Expansion deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>