force-app/main/default/objects/Account/fields/ICP_Fit_Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>ICP_Fit_Number_of_Locations__c</fullName>
    <description>Specifies the number of locations a company has, likely used as a metric to determine their ICP fit</description>
    <label>ICP Fit Number of Locations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>