force-app/main/default/objects/Account/fields/ICP_Subindustry__c.field-meta.xml
<CustomField>
    <fullName>ICP_Subindustry__c</fullName>
    <label>ICP Subindustry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>