force-app/main/default/objects/Account/fields/ICP_Verdict__c.field-meta.xml
<CustomField>
    <fullName>ICP_Verdict__c</fullName>
    <description>A text field indicating the final decision or classification regarding an account&apos;s Ideal Customer Profile (ICP) fit</description>
    <label>ICP Verdict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>