force-app/main/default/objects/Account/fields/ICP_Verdict_Reason__c.field-meta.xml
<CustomField>
    <fullName>ICP_Verdict_Reason__c</fullName>
    <description>A text area used to provide the justification or explanation for the chosen ICP Verdict.</description>
    <label>ICP Verdict Reason</label>
    <type>TextArea</type>
</CustomField>