force-app/main/default/objects/Account/fields/industry_property_sync__c.field-meta.xml
<CustomField>
    <fullName>industry_property_sync__c</fullName>
    <label>Industry (contact property sync)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>