force-app/main/default/objects/Account/fields/install_contact_email__c.field-meta.xml
<CustomField>
    <fullName>install_contact_email__c</fullName>
    <label>Install Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>