force-app/main/default/objects/Account/fields/install_contact_phone_number__c.field-meta.xml
<CustomField>
    <fullName>install_contact_phone_number__c</fullName>
    <label>Install Contact Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>