force-app/main/default/objects/Account/fields/Last_Touch_Converting_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Converting_Campaign__c</fullName>
    <label>Last Touch Converting Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>