force-app/main/default/objects/Account/fields/Latest_Traffic_Source_Data_1__c.field-meta.xml
<CustomField>
    <fullName>Latest_Traffic_Source_Data_1__c</fullName>
    <label>Latest Traffic Source Data 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>