force-app/main/default/objects/Account/fields/Latest_Traffic_Source_Data__c.field-meta.xml
<CustomField>
    <fullName>Latest_Traffic_Source_Data__c</fullName>
    <description>Provides specific details about the latest traffic source, such as the exact social network or referring website name</description>
    <label>Latest Traffic Source Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>