force-app/main/default/objects/Account/fields/lead_scoring_property_sync__c.field-meta.xml
<CustomField>
    <fullName>lead_scoring_property_sync__c</fullName>
    <label>Lead Scoring (Property Sync)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>