force-app/main/default/objects/Account/fields/lifecyclestage__c.field-meta.xml
<CustomField>
    <fullName>lifecyclestage__c</fullName>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscriber</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Sales Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Evangelist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Long-term Nurture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>