force-app/main/default/objects/Account/fields/list_tool__c.field-meta.xml
<CustomField>
    <fullName>list_tool__c</fullName>
    <label>List Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>ChainStoreGuide</fullName>
            </value>
            <value>
                <fullName>FDD</fullName>
            </value>
            <value>
                <fullName>Seamless.ai</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Selling.com (fka Infotelligent)</fullName>
            </value>
            <value>
                <fullName>EBQ</fullName>
            </value>
            <value>
                <fullName>Online Magazine Pages</fullName>
            </value>
            <value>
                <fullName>CannaSpyGlass</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>Clay (Growth Experiment)</fullName>
            </value>
            <value>
                <fullName>2025 NACS enews</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>OBEDIO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Clay (Enrichment)</fullName>
            </value>
            <value>
                <fullName>Wiza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>