force-app/main/default/objects/Account/fields/main_contact_phone__c.field-meta.xml
<CustomField>
    <fullName>main_contact_phone__c</fullName>
    <label>Main Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>