force-app/main/default/objects/Account/fields/manage_url__c.field-meta.xml
<CustomField>
    <fullName>manage_url__c</fullName>
    <label>Manage URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>