force-app/main/default/objects/Account/fields/mrr_opportunity_recent_deal_future_sites__c.field-meta.xml
<CustomField>
    <fullName>mrr_opportunity_recent_deal_future_sites__c</fullName>
    <label>Avg MRR/Site x Recent Deal Future Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>